force-app/main/default/objects/ccrz__E_CategoryI18N__c/ccrz__E_CategoryI18N__c.object-meta.xml
<CustomObject>
    <description>Internationalization for Categories</description>
    <label>CC CategoryI18N</label>
    <nameField>
        <label>CategoryI18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC CategoryI18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>