force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <description>Reference to the Category entry being localized</description>
    <label>Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>CategoryI18Ns</relationshipLabel>
    <relationshipName>CategoryI18Ns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>