force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__CategoryI18NId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CategoryI18NId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External reference id for this entry</description>
    <externalId>true</externalId>
    <label>Category I18N Ext Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>