force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>The locale for this entry, such as &apos;en_US&apos;</description>
    <label>Locale</label>
    <length>25</length>
    <type>Text</type>
</CustomField>