force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__SEOId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SEOId__c</fullName>
    <description>A shortened name for the category. This is used when constructing friendly URLs.</description>
    <externalId>true</externalId>
    <inlineHelpText>A shortened name for the category. This is used when constructing friendly URLs.</inlineHelpText>
    <label>SEO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>